Correct import statement in 04_....ipynb

--- a/agentMET4FOF_bayesian-neural-network_ZeMA/04-Run-Multi-Agents-System.ipynb
+++ b/agentMET4FOF_bayesian-neural-network_ZeMA/04-Run-Multi-Agents-System.ipynb
@@ -29,7 +29,7 @@
     "import random\n",
     "from copy import copy\n",
     "\n",
-    "from Agent_models.agents import Sensor, Aggregator, Predictor, DecisionMaker, SensorNetwork\n",
+    "from .Agent_models.agents import Sensor, Aggregator, Predictor, DecisionMaker, SensorNetwork\n",
     "\n",
     "# TYPES OF AGENT\n",
     "# 0 - SENSOR NETWORK\n",
