--- a/agentMET4FOF_bayesian_neural_network_ZeMA/02-Data-Preprocessing.ipynb
+++ b/agentMET4FOF_bayesian_neural_network_ZeMA/02-Data-Preprocessing.ipynb
@@ -20,18 +20,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
     "import numpy as np\n",
     "\n",
-    "data_path = \"Dataset/ZEMA_Hydraulic/\"\n",
+    "data_path = \"dataset/ZEMA_Hydraulic/\"\n",
     "\n",
-    "filenames_input_data_10Hz = [\"fs1\",\"fs2\"]       \n",
+    "filenames_input_data_10Hz = [\"FS1\",\"FS2\"]\n",
     "filenames_input_data_10Hz = [file + \".txt\" for file in filenames_input_data_10Hz]\n",
     "\n",
-    "filenames_input_data_100Hz = [\"ps1\",\"ps2\",\"ps3\",\"ps4\",\"ps5\",\"ps6\",\"eps1\"]       \n",
+    "filenames_input_data_100Hz = [\"PS1\",\"PS2\",\"PS3\",\"PS4\",\"PS5\",\"PS6\",\"EPS1\"]\n",
     "filenames_input_data_100Hz = [file + \".txt\" for file in filenames_input_data_100Hz]\n",
     "  \n",
     "data_input_data_10Hz = np.zeros((2205,600,len(filenames_input_data_10Hz)))\n",
@@ -45,8 +45,10 @@
     "    input_data = np.loadtxt(data_path + file_name, delimiter = \"\\t\")\n",
     "    data_input_data_100Hz[:,:,id_] = input_data.copy()\n",
     "\n",
-    "filenames_input_data_10Hz_resampled = [\"res_\"+file for file in filenames_input_data_10Hz]\n",
-    "filenames_input_data_100Hz_resampled = [\"res_\"+file for file in filenames_input_data_100Hz]\n",
+    "filenames_input_data_10Hz_resampled = [\"RES_\"+file for file in \n",
+    "                                       filenames_input_data_10Hz]\n",
+    "filenames_input_data_100Hz_resampled = [\"RES_\"+file for file in\n",
+    "                                        filenames_input_data_100Hz]\n",
     "\n",
     "#resample 10Hz\n",
     "resample = np.linspace(0,600-1, num =60,dtype=\"int\")\n",
@@ -75,7 +77,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -84,7 +86,9 @@
     "seq_length = 60\n",
     "\n",
     "#deal with inputs data\n",
-    "filenames_input_data_1Hz = [\"ts1\",\"ts2\",\"ts3\",\"ts4\",\"vs1\",\"se\",\"res_fs1\",\"res_fs2\",\"res_ps1\",\"res_ps2\",\"res_ps3\",\"res_ps4\",\"res_ps5\",\"res_ps6\",\"res_eps1\",\"ce\",\"cp\"]                           \n",
+    "filenames_input_data_1Hz = [\"TS1\",\"TS2\",\"TS3\",\"TS4\",\"VS1\",\"SE\",\"RES_FS1\",\"RES_FS2\",\n",
+    "                            \"RES_PS1\",\"RES_PS2\",\"RES_PS3\",\"RES_PS4\",\"RES_PS5\",\n",
+    "                            \"RES_PS6\",\"RES_EPS1\",\"CE\",\"CP\"]\n",
     "filenames_input_data_1Hz = [file + \".txt\" for file in filenames_input_data_1Hz]\n",
     "filename_target_data = \"profile.txt\" \n",
     "        \n",
@@ -106,7 +110,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -169,7 +173,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -191,7 +195,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": []
