--- a/agentMET4FOF_bayesian_neural_network_ZeMA/other_examples/agents_main.ipynb
+++ b/agentMET4FOF_bayesian_neural_network_ZeMA/other_examples/agents_main.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 73,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -24,14 +24,13 @@
     "    def on_init(self):\n",
     "        self.log_info('SENSOR INITIALIZED')\n",
     "        self.current_data =0\n",
-    "        self.pushPull_commStreams = {\"aggregator_id\":[]}\n",
     "    def read_request(self,message):\n",
     "        self.log_info('RECEIVED JOB: {}'.format(message) )\n",
     "        self.send_data(message)\n",
     "    def send_data(self,message=0):\n",
     "        data = self.read_generator()\n",
-    "        self.log_info('SENDING OFF DATA : {}'.format(data))       \n",
-    "        self.send(self.pushPull_commStreams[message.agg_id], {self.name:data})\n",
+    "        self.log_info('SENDING OFF DATA : {}'.format(data))\n",
+    "        self.send(self.sens_agg_PUSH, {self.name:data})\n",
     "    def set_generator(self, generator_function):\n",
     "        self.generator = generator_function\n",
     "    def read_generator(self):\n",
@@ -58,20 +57,11 @@
     "        self.sens_agg_PUB = addr_PUB\n",
     "\n",
     "        for i in range(len(sensor_list)):\n",
-    "            #connect pub-sub (agg-sens)\n",
     "            sensor_list[i].connect(addr_PUB, handler=Sensor.read_request)\n",
-    "\n",
-    "            #connect push-pull (sens-agg)\n",
     "            addr_PULL = self.bind('PULL', alias='PUSH_SENS_AGG_'+str(i+1),handler=Aggregator.aggregate_sensor_data)\n",
     "            addr_PUSH = sensor_list[i].bind('PUSH', alias='PUSH_SENS_AGG_'+str(i+1))\n",
     "            self.connect(addr_PUSH, handler=Aggregator.aggregate_sensor_data)\n",
-    "            #sensor_list[i].set_attr(sens_agg_PUSH = addr_PUSH)\n",
-    "            #sensor_list[i].get_attr(\"pushPull_commStreams\").append(pd.DataFrame({\"aggregator_id\": [\"gg\"], \"stream_obj\": [123]}))\n",
-    "            temp_streams = sensor_list[i].get_attr(\"pushPull_commStreams\")\n",
-    "            temp_streams[self.name]=addr_PUSH\n",
-    "            sensor_list[i].set_attr(pushPull_commStreams=temp_streams)\n",
-    "            print(sensor_list[i].get_attr(\"pushPull_commStreams\"))\n",
-    "            #sensor_list[i].get_attr(\"pushPull_commStreams\").append()\n",
+    "            sensor_list[i].set_attr(sens_agg_PUSH = addr_PUSH)\n",
     "        self.binded_sensors = sensor_list\n",
     "        self.num_sensors = len(sensor_list)\n",
     "        self.log_info(\"Binded all sensors\")\n",
@@ -85,7 +75,7 @@
     "\n",
     "    def request_sensors_data(self):\n",
     "        self.num_requests = self.num_requests+1\n",
-    "        self.send(self.sens_agg_PUB, {\"agg_id\":self.name,\"request_no\":self.num_requests})\n",
+    "        self.send(self.sens_agg_PUB, \"Request #\"+str(self.num_requests))\n",
     "        self.log_info(\"Requesting data from Sensor Agents \")\n",
     "    def clear_buffer(self):\n",
     "        self.buffer = {}\n",
@@ -98,7 +88,6 @@
     "    def get_buffer_data(self):\n",
     "        return self.buffer_pd\n",
     "\n",
-    "        \n",
     "class SensorNetwork(Agent):\n",
     "    def on_init(self):\n",
     "        self.sensor_list =[]\n",
@@ -135,59 +124,73 @@
     "def gen2(t=0):\n",
     "    x = 10*t-5\n",
     "    unc_x = 0.05\n",
-    "    return x, unc_x\n",
-    "\n",
-    "\n",
-    "   \n",
-    "   \n",
-    "   \n",
-    "   \n",
-    "   \n",
-    "   \n",
-    "   \n",
-    "   \n",
-    "   \n",
-    "   \n",
-    "   \n",
-    "   \n",
-    "   \n",
-    "   \n",
-    "   \n",
-    "   "
+    "    return x, unc_x"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "if \"ns\" in globals():\n",
-    "    ns.shutdown()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 42,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "ns = osbrain.nameserver.run_nameserver(addr='127.0.0.1:14065')\n",
-    "\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 74,
    "metadata": {},
    "outputs": [
     {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Broadcast server running on 0.0.0.0:9091\n",
+      "NS running on 127.0.0.1:14065 (127.0.0.1)\n",
+      "URI = PYRO:Pyro.NameServer@127.0.0.1:14065\n",
+      "NS shut down.\n"
+     ]
+    }
+   ],
+   "source": [
+    "ns = osbrain.nameserver.run_nameserver(addr='127.0.0.1:14065')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 75,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "INFO [2020-04-24 07:27:27.885858] (sensor_force1): SENSOR INITIALIZED\n",
+      "INFO [2020-04-24 07:27:27.959217] (sensor_network): sensor added generator function\n",
+      "INFO [2020-04-24 07:27:27.979087] (sensor_temp1): SENSOR INITIALIZED\n",
+      "INFO [2020-04-24 07:27:28.039294] (sensor_network): sensor added generator function\n",
+      "INFO [2020-04-24 07:27:28.052681] (sensor_speed1): SENSOR INITIALIZED\n",
+      "INFO [2020-04-24 07:27:28.116730] (sensor_network): sensor added generator function\n",
+      "INFO [2020-04-24 07:27:28.159259] (sensor_force2): SENSOR INITIALIZED\n",
+      "INFO [2020-04-24 07:27:28.219078] (sensor_network): sensor added generator function\n",
+      "INFO [2020-04-24 07:27:29.535307] (aggregator_0): Binded all sensors\n",
+      "INFO [2020-04-24 07:27:29.868512] (aggregator_1): Binded all sensors\n",
+      "INFO [2020-04-24 07:27:30.745906] (aggregator_0): Requesting data from Sensor Agents \n",
+      "INFO [2020-04-24 07:27:30.760733] (aggregator_1): Requesting data from Sensor Agents \n",
+      "INFO [2020-04-24 07:27:30.762014] (sensor_force2): RECEIVED JOB: Request #1\n",
+      "INFO [2020-04-24 07:27:30.766663] (sensor_force2): SENDING OFF DATA : (1309.7, 0.01)\n",
+      "INFO [2020-04-24 07:27:30.749470] (sensor_force1): RECEIVED JOB: Request #1\n",
+      "INFO [2020-04-24 07:27:30.747261] (sensor_temp1): RECEIVED JOB: Request #1\n",
+      "INFO [2020-04-24 07:27:30.797601] (sensor_force1): SENDING OFF DATA : (10597.699999999999, 0.01)\n",
+      "INFO [2020-04-24 07:27:30.762014] (sensor_speed1): RECEIVED JOB: Request #1\n",
+      "INFO [2020-04-24 07:27:30.800977] (sensor_temp1): SENDING OFF DATA : (387165, 0.05)\n",
+      "INFO [2020-04-24 07:27:30.802081] (sensor_speed1): SENDING OFF DATA : (398095, 0.05)\n",
+      "INFO [2020-04-24 07:27:30.807603] (aggregator_1): Received all data from Sensor Agents, ready to be sent off:\n",
+      "INFO [2020-04-24 07:27:30.804493] (aggregator_0): Received all data from Sensor Agents, ready to be sent off:\n",
+      "INFO [2020-04-24 07:27:30.816407] (aggregator_0): Buffer Data:    sensor_force1  sensor_temp1\n",
+      "0       10597.70     387165.00\n",
+      "1           0.01          0.05\n",
+      "INFO [2020-04-24 07:27:30.819366] (aggregator_1): Buffer Data:    sensor_force2  sensor_speed1\n",
+      "0        1309.70      398095.00\n",
+      "1           0.01           0.05\n"
+     ]
+    },
+    {
      "data": {
-      "text/plain": [
-       "(133295.3, 0.01)"
-      ]
+      "text/plain": "(142109.0, 0.01)"
      },
-     "execution_count": 43,
+     "execution_count": 75,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -208,100 +211,79 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 76,
    "metadata": {},
    "outputs": [],
    "source": [
-    "#add aggregators and bind them to sensors\n",
+    "#add aggregators\n",
     "aggregator1 = sensor_network.add_aggregator([sensor1,sensor2])\n",
-    "  "
+    "aggregator2 = sensor_network.add_aggregator([sensor3,sensor4])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "{'aggregator_0': AgentAddress(tcp, 127.0.0.1:51960, PUSH, server, pickle),\n",
-       " 'aggregator_id': []}"
-      ]
-     },
-     "execution_count": 45,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "sensor1.get_attr(\"pushPull_commStreams\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 77,
    "metadata": {},
    "outputs": [],
    "source": [
     "#send request to aggregator agents for data from sensors\n",
-    "aggregator1.request_sensors_data()"
+    "aggregator1.request_sensors_data()\n",
+    "aggregator2.request_sensors_data()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 78,
    "metadata": {},
    "outputs": [],
    "source": [
-    "if __name__ == '__main__':\n",
-    "   #SYSTEM INITIALIZE\n",
-    "   ns = osbrain.nameserver.run_nameserver(addr='127.0.0.1:14065')\n",
-    "\n",
-    "   sensor_network = run_agent('sensor_network', base=SensorNetwork)\n",
-    "\n",
-    "   #add sensors\n",
-    "   sensor1 = sensor_network.add_simsensor(generator=gen1, type=\"force\", unit_v = \"N\", id='sensor_force1')\n",
-    "   sensor2 = sensor_network.add_simsensor(generator=gen2, type=\"temperature\", unit_v = \"F\", id='sensor_temp1')\n",
-    "   sensor3 = sensor_network.add_simsensor(generator=gen2, type=\"speed\", unit_v = \"ms-1\", id='sensor_speed1')\n",
-    "   sensor4 = sensor_network.add_simsensor(generator=gen1, type=\"force\", unit_v = \"N\", id='sensor_force2')\n",
-    "\n",
-    "   #access sensors by either way\n",
-    "   sensor_network.get_attr('sensor_list')[0].read_generator()\n",
-    "   sensor1.read_generator()\n",
-    "\n",
-    "   #add aggregators\n",
-    "   aggregator1 = sensor_network.add_aggregator([sensor1,sensor2])\n",
-    "   aggregator2 = sensor_network.add_aggregator([sensor3,sensor4])\n",
-    "\n",
-    "   #send request to aggregator agents for data from sensors\n",
-    "   aggregator1.request_sensors_data()\n",
-    "   aggregator2.request_sensors_data()\n",
-    "\n",
-    "   #wait for aggregator buffer to be filled and store data in variable\n",
-    "   while aggregator1.check_fill_buffer() == False:\n",
-    "       time.sleep(1)\n",
-    "   data_requested = aggregator1.get_buffer_data()\n",
-    "   aggregator1.clear_buffer()\n",
-    "\n",
-    "   #print sensor info\n",
-    "   print(sensor1.get_attr('type'),sensor1.get_attr('unit_v'),sensor1.get_attr('id'))\n",
-    "\n",
-    "   #print requested data\n",
-    "   print(data_requested)\n",
-    "\n",
-    "   #list of agents in system\n",
-    "   print(ns.agents())\n",
-    "  \n",
-    "   ns.shutdown()"
+    "#wait for aggregator buffer to be filled and store data in variable\n",
+    "while aggregator1.check_fill_buffer() == False:\n",
+    "   time.sleep(1)\n",
+    "data_requested = aggregator1.get_buffer_data()\n",
+    "aggregator1.clear_buffer()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 79,
    "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "force N sensor_force1\n",
+      "   sensor_force1  sensor_temp1\n",
+      "0       10597.70     387165.00\n",
+      "1           0.01          0.05\n",
+      "['sensor_network', 'sensor_force1', 'sensor_temp1', 'sensor_speed1', 'sensor_force2', 'aggregator_0', 'aggregator_1']\n"
+     ]
+    }
+   ],
+   "source": [
+    "#print sensor info\n",
+    "print(sensor1.get_attr('type'),sensor1.get_attr('unit_v'),sensor1.get_attr('id'))\n",
+    "\n",
+    "#print requested data\n",
+    "print(data_requested)\n",
+    "\n",
+    "#list of agents in system\n",
+    "print(ns.agents())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 80,
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [],
-   "source": []
+   "source": [
+    "ns.shutdown()"
+   ]
   }
  ],
  "metadata": {
