--- a/agentMET4FOF_bayesian_neural_network_ZeMA/03-BNN-Training.ipynb
+++ b/agentMET4FOF_bayesian_neural_network_ZeMA/03-BNN-Training.ipynb
@@ -17,30 +17,18 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import torch\n",
     "import pickle\n",
-    "from sklearn.model_selection import KFold\n",
-    "from sklearn.preprocessing import StandardScaler, MinMaxScaler,RobustScaler\n",
     "import random\n",
-    "from torch.autograd import Variable\n",
-    "import numpy as np\n",
-    "from sklearn.metrics import confusion_matrix\n",
-    "from sklearn.utils.multiclass import unique_labels\n",
-    "import matplotlib.pyplot as plt\n",
-    "import pandas as pd\n",
-    "from copy import copy \n",
-    "from agentMET4FOF_bayesian_neural_network_ZeMA.ML_models.BBBlayers import \\\n",
-    "    BBBLinearFactorial\n",
-    "from agentMET4FOF_bayesian_neural_network_ZeMA.ML_models.BBBlayers import GaussianVariationalInference\n",
-    "from agentMET4FOF_bayesian_neural_network_ZeMA.ML_models.BNN_Wrapper import BNN_Wrapper\n",
-    "from agentMET4FOF_bayesian_neural_network_ZeMA.ML_models.BNN_Wrapper import BNN_Full\n",
-    "import seaborn as sns\n",
+    "from copy import copy\n",
     "\n",
-    "from scipy.stats import skew\n",
-    "from scipy.stats import kurtosis \n",
+    "import numpy as np\n",
+    "import torch\n",
     "from scipy.stats import sem\n",
-    "from scipy.fftpack import fft\n",
-    "from sklearn.metrics import f1_score"
+    "from sklearn.model_selection import KFold\n",
+    "from torch.autograd import Variable\n",
+    "\n",
+    "from agentMET4FOF_bayesian_neural_network_ZeMA.ML_models.BNN_Wrapper import BNN_Full, \\\n",
+    "    BNN_Wrapper"
    ]
   },
   {
@@ -111,14 +99,14 @@
     "randomShuffling= True\n",
     "\n",
     "#randomShuffling\n",
-    "if(randomShuffling == True):\n",
+    "if randomShuffling :\n",
     "    index_list = np.arange(X_data.shape[0])\n",
     "    random.shuffle(index_list)\n",
     "    Y_data=Y_data[index_list,:]\n",
     "    X_data=X_data[index_list,:,:]\n",
     "\n",
-    "def split_segment(X_data,split_n =1):\n",
-    "    X_data_split=np.split(X_data,split_n,axis=1)\n",
+    "def split_segment(X,split_n =1):\n",
+    "    X_data_split=np.split(X,split_n,axis=1)\n",
     "    X_data_split=np.moveaxis(X_data_split, 0, -2)\n",
     "    X_data_split=X_data_split.reshape((X_data_split.shape[0],X_data_split.shape[1],-1))\n",
     "    return X_data_split\n",
@@ -2645,7 +2633,7 @@
     "    \n",
     "    for train, test in kf.split(X_data,y=Y_data):\n",
     "        \n",
-    "        if(kfold_times >kfold_limit):\n",
+    "        if kfold_times >kfold_limit:\n",
     "            break\n",
     "        print(\"%s %s\" % (train, test))\n",
     "        \n",
@@ -2656,7 +2644,7 @@
     "        y_test=Y_data[test,selected_output]\n",
     "        \n",
     "        #simulate broken sensors on test set\n",
-    "        if simulate_broken_sensor == True:\n",
+    "        if simulate_broken_sensor:\n",
     "            x_test_brokenSensor = Variable(torch.from_numpy(x_test).float()).repeat(x_train.shape[-1]+1,1,1,1)    \n",
     "            for corrupted_sensor in range(x_train.shape[-1]):\n",
     "                x_test_brokenSensor[corrupted_sensor,:,:,corrupted_sensor] =torch.randn_like(x_test_brokenSensor[corrupted_sensor,:,:,corrupted_sensor]) \n",
@@ -2666,10 +2654,10 @@
     "        \n",
     "        \n",
     "        y_test_tensor = Variable(torch.from_numpy(y_test).long())   \n",
-    "        if simulate_broken_sensor == True:\n",
+    "        if simulate_broken_sensor:\n",
     "            y_test_tensor_repeated = y_test_tensor.repeat(x_train.shape[-1]+1,1)\n",
     "            y_test_tensor_repeated = y_test_tensor_repeated.view(-1)    \n",
-    "        elif simulate_broken_sensor == False:\n",
+    "        elif not simulate_broken_sensor:\n",
     "            y_test_tensor_repeated = y_test_tensor\n",
     "    \n",
     "        #perform feature extraction on train and test\n",
