--- a/agentMET4FOF_bayesian_neural_network_ZeMA/04-Run-Multi-Agents-System.ipynb
+++ b/agentMET4FOF_bayesian_neural_network_ZeMA/04-Run-Multi-Agents-System.ipynb
@@ -15,21 +15,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import osbrain\n",
-    "from osbrain.agent import run_agent\n",
-    "from osbrain.agent import Agent\n",
-    "\n",
-    "import pandas as pd\n",
-    "from datetime import datetime\n",
-    "\n",
+    "import pickle\n",
+    "import random\n",
     "import time\n",
     "\n",
-    "import pickle\n",
     "import numpy as np\n",
-    "import random\n",
-    "from copy import copy\n",
+    "import osbrain\n",
+    "from osbrain.agent import run_agent\n",
     "\n",
-    "from agentMET4FOF_bayesian_neural_network_ZeMA.Agent_models.agents import Sensor, Aggregator, Predictor, DecisionMaker, SensorNetwork\n",
+    "from agentMET4FOF_bayesian_neural_network_ZeMA.Agent_models.agents import SensorNetwork\n",
     "\n",
     "# TYPES OF AGENT\n",
     "# 0 - SENSOR NETWORK\n",
@@ -54,7 +48,7 @@
     "Y_data = data_output\n",
     "randomShuffling = True\n",
     "\n",
-    "if (randomShuffling == True):\n",
+    "if randomShuffling :\n",
     "    index_list = np.arange(X_data.shape[0])\n",
     "    random.shuffle(index_list)\n",
     "    Y_data = Y_data[index_list, :]\n",
