--- a/agentMET4FOF_bayesian_neural_network_ZeMA/02-Data-Preprocessing.ipynb
+++ b/agentMET4FOF_bayesian_neural_network_ZeMA/02-Data-Preprocessing.ipynb
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -77,7 +77,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -110,7 +110,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -120,10 +120,10 @@
     "#conversion of outputs to one hot\n",
     "def makeOneHotVectorMap(length):\n",
     "    map_toOneHot ={}\n",
-    "    for i in range(length):\n",
+    "    for i_onehot in range(length):\n",
     "        oneHot = np.zeros(length)\n",
-    "        oneHot[i] = 1\n",
-    "        map_toOneHot[i] = oneHot\n",
+    "        oneHot[i_onehot] = 1\n",
+    "        map_toOneHot[i_onehot] = oneHot\n",
     "    return map_toOneHot\n",
     "        \n",
     "id2x_dictionaries = []\n",
@@ -173,7 +173,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -182,7 +182,7 @@
     "\n",
     "pickle_folder= \"pickles\"\n",
     "\n",
-    "if os.path.exists(pickle_folder) == False:\n",
+    "if not os.path.exists(pickle_folder):\n",
     "    os.mkdir(pickle_folder)\n",
     "\n",
     "#Pickle them\n",
@@ -195,7 +195,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": []
